2002-07-19  Duncan Mak  <duncan@ximian.com>

	* gtk/Paned.custom: 
	* glue/paned.c: Glue code for getting child1 and child2 out from a Gtk.Paned.

	* glue/Makefile.am: Add paned.c

2002-07-19  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructGen.cs : comment out GenField. It's broke.
	* sample/ButtonApp.cs : revert the EventAny WriteLine.

2002-07-19  Mike Kestner <mkestner@speakeasy.net>

	* parser/gapi2xml.pl : mark privately defined structs opaque.

2002-07-18  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructBase.cs : use GetMarshalType for field gen.
	* sample/ButtonApp.cs : WriteLine the Gdk.EventAny in DeleteEvent.

2002-07-18  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructGen.cs : make them public structs, not classes.
	* parser/build.pl : step up to the g2final tarballs.
	* parser/gapi2xml.pl : suppress *Private struct types. Mark 
	  ellipsis terminated param lists.

2002-07-18  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructBase.cs : Mangle field names.
	* generator/StructGen.cs : uncomment GenField.

2002-07-18  Duncan Mak  <duncan@ximian.com>

	* parser/Gtk.metadata: Mark gtk_radio_menu_item_new_with_label, 
	gtk_radio_button_new_with_label, gtk_radio_button_new and
	gtk_radio_button_new_with_mnemonic with null_ok flags.

2002-07-17  Radek Doulik  <rodo@ximian.com>

	* gtk/ScrolledWindow.custom: new file with ScrolledWindow custom
	default constructor
	use this (null, null)

	* parser/Metadata.pm: addClassData subroutine to add
	<disabledefaultconstructor/>

	* parser/Gtk.metadata: disable default constructor for
	ScrolledWindow

	* generator/ObjectGen.cs: added hasDefaultConstructor flag, dont
	generate default protected empty constructor if
	hasDefaultConstructor is false, it will be provided by .custom
	file

	* generator/makefile (RUNTIME): use RUNTIME variable

2002-07-17  Rachel Hestilow  <hestilow@ximian.com>

	* parser/Gtk.metadata: Tag MenuItem.SetSubmenu as null-ok.
