@@ -673,6 +673,7 @@
       <property name="Anchor" cname="anchor" type="GtkAnchorType" doc-string=" NULL" readable="true" writeable="true"/>
       <property name="SizePixels" cname="size_pixels" type="gboolean" doc-string=" NULL" readable="true" writeable="true"/>
     </object>
+    <struct name="CanvasBpathPriv" cname="GnomeCanvasBpathPriv" opaque="true"/>
     <struct name="CanvasPathDef" cname="GnomeCanvasPathDef" opaque="true">
       <method name="Unref" cname="gnome_canvas_path_def_unref">
         <return-type type="void"/>
@@ -3028,6 +3029,7 @@
       <field cname="changed_mask" type="GdkWindowState"/>
       <field cname="new_window_state" type="GdkWindowState"/>
     </struct>
+    <boxed name="Font" cname="GdkFont" opaque="true"/>
     <struct name="GCValues" cname="GdkGCValues">
       <field cname="foreground" type="GdkColor"/>
       <field cname="background" type="GdkColor"/>
@@ -3245,6 +3247,7 @@
         <return-type type="void"/>
       </method>
     </struct>
+    <struct name="Screen" cname="GdkScreen" opaque="true"/>
     <struct name="Segment" cname="GdkSegment">
       <field cname="x1" type="gint"/>
       <field cname="y1" type="gint"/>
@@ -12934,6 +12937,7 @@
       <field cname="accel_flags" bits="16" type="guint"/>
     </struct>
     <alias name="Allocation" cname="GtkAllocation" type="GdkRectangle    "/>
+    <struct name="Arg" cname="GtkArg" opaque="true"/>
     <struct name="BindingArg" cname="GtkBindingArg">
       <field cname="arg_type" type="GtkType"/>
       <field cname="{glong long_data" type="union"/>
@@ -13255,6 +13259,7 @@
       <field cname="parent_tree" type="GtkRBTree*"/>
       <field cname="parent_node" type="GtkRBNode*"/>
     </struct>
+    <struct name="RBTreeView" cname="GtkRBTreeView" opaque="true"/>
     <struct name="RangeLayout" cname="GtkRangeLayout" opaque="true"/>
     <struct name="RangeStepTimer" cname="GtkRangeStepTimer" opaque="true"/>
     <struct name="RcContext" cname="GtkRcContext" opaque="true"/>
@@ -13480,6 +13485,7 @@
       </method>
     </boxed>
     <struct name="TextBTree" cname="GtkTextBTree" opaque="true"/>
+    <struct name="TextCounter" cname="GtkTextCounter" opaque="true"/>
     <boxed name="TextIter" cname="GtkTextIter">
       <field cname="dummy1" type="gpointer"/>
       <field cname="dummy2" type="gpointer"/>
@@ -16157,6 +16163,7 @@
         </parameters>
       </method>
     </object>
+    <struct name="AppBarMsg" cname="GnomeAppBarMsg" opaque="true"/>
     <struct name="GdkPixbufAsyncHandle" cname="GnomeGdkPixbufAsyncHandle" opaque="true"/>
     <struct name="UIBuilderData" cname="GnomeUIBuilderData">
       <field cname="connect_func" type="GnomeUISignalConnectFunc"/>
@@ -16983,6 +16990,7 @@
         </parameters>
       </method>
     </object>
+    <struct name="HTMLClassProperties" cname="GtkHTMLClassProperties" opaque="true"/>
     <struct name="HTMLEditorAPI" cname="GtkHTMLEditorAPI">
       <callback cname="check_word">
         <return-type type="gboolean"/>
@@ -17033,6 +17041,8 @@
         </parameters>
       </callback>
     </struct>
+    <struct name="HTMLEmbedded" cname="GtkHTMLEmbedded" opaque="true"/>
+    <struct name="HTMLEmbeddedClass" cname="GtkHTMLEmbeddedClass" opaque="true"/>
     <struct name="HTMLStream" cname="GtkHTMLStream">
       <field cname="write_func" type="GtkHTMLStreamWriteFunc"/>
       <field cname="close_func" type="GtkHTMLStreamCloseFunc"/>
@@ -19364,6 +19374,17 @@
         </parameters>
       </method>
     </struct>
+    <boxed name="Language" cname="PangoLanguage" opaque="true">
+      <method name="GetSampleString" cname="pango_language_get_sample_string">
+        <return-type type="const-char*"/>
+      </method>
+      <method name="Matches" cname="pango_language_matches">
+        <return-type type="gboolean"/>
+        <parameters>
+          <parameter type="const-char*" name="range_list"/>
+        </parameters>
+      </method>
+    </boxed>
     <struct name="LayoutIter" cname="PangoLayoutIter" opaque="true">
       <method name="GetRunExtents" cname="pango_layout_iter_get_run_extents">
         <return-type type="void"/>
@@ -19522,6 +19543,8 @@
       <field cname="info" type="PangoEngineInfo*"/>
       <field cname="is_exact" type="gboolean"/>
     </struct>
+    <struct name="OTInfo" cname="PangoOTInfo" opaque="true"/>
+    <struct name="OTRuleset" cname="PangoOTRuleset" opaque="true"/>
     <alias name="OTTag" cname="PangoOTTag" type="guint32  "/>
     <struct name="Rectangle" cname="PangoRectangle">
       <field cname="x" type="int"/>
