@@ -1,3 +1,10 @@
+2002-07-20  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/Method.cs : beef up !Validate warnings
+	* generator/ObjectGen.cs : beef up !Validate warnings
+	* generator/Parameters.cs (Validate): fail on ellipsis parm
+	* parser/gapi2xml.pl : Handle more opaque types properly
+	
 2002-07-19  Duncan Mak  <duncan@ximian.com>
 
 	* gtk/Paned.custom: 
